Update AIDataProviderTest.java